# cortex-os

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  setup.sh
.github/workflows/: ci.yml
agents/architect/: config.json
agents/cyber-security/: config.json
agents/devops/: config.json
agents/devops/tools/: validate_dockerfile.sh
agents/fundamental-researcher/: config.json
agents/market-analyst/: config.json
agents/market-analyst/tools/: fetch_binance_ticker.py
agents/risk-manager/: config.json
agents/software-engineer/: config.json
agents/software-engineer/tools/: run_linter.sh
agents/squads/: engineering.json  financial.json
agents/tester/: config.json
agents/tester/tools/: hello.py  market_scan.py
cortex-cli/: Cargo.toml
cortex-cli/src/: main.rs
cortex-core/: Cargo.toml
cortex-core/src/: agent.rs  health.rs  lib.rs  nats_bus.rs  permissions.rs  registry.rs  sandbox.rs  shutdown.rs  squad.rs  swarm.rs  vault.rs  workflow.rs
cortex-core/src/tools/: bash.rs  delegation.rs  file.rs  mcp.rs  mod.rs  script.rs  tree.rs  web.rs
cortex-gateway/: Cargo.toml
cortex-gateway/src/: main.rs  manager.rs
cortex-gateway/src/adapter/: discord.rs  mod.rs  telegram.rs
cortex-memory/: Dockerfile  pyproject.toml
cortex-memory/cortex_memory/: __init__.py  __main__.py  _version.py  config.py  main.py  nats_bridge.py
cortex-memory/cortex_memory/brain/: __init__.py  api_clients.py  compressor.py  engine.py  model_router.py  ollama_client.py  prompts.py
cortex-memory/cortex_memory/palace/: __init__.py  ingest.py  knowledge_graph.py  models.py  search.py  storage.py  vector.py
cortex-memory/tests/: test_brain_engine.py  test_hybrid_search.py  test_ingest.py  test_knowledge_graph.py  test_nats_bridge.py  test_palace_storage.py
cortex-tui/: Cargo.toml
cortex-tui/src/: main.rs
cortex-web/: index.html  package-lock.json  package.json
cortex-web/src/: App.tsx  index.css
cortex-web/src/store/: useNatsStore.ts
scripts/: generate_certs.sh
