[workspace]
resolver = "2"
members = [
    "cortex-core",
    "cortex-cli",
    "cortex-tui",
    "cortex-gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Virgil Hawkins <virgilhawkins00>"]
license = "MIT"
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-nats = "0.38"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
html2text = "0.12"
uuid = { version = "1", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
