[package]
name = "cortex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "The interactive CLI for Cortex OS"

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
cortex-core = { path = "../cortex-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-nats.workspace = true
clap.workspace = true
futures = "0.3"
rpassword = "7.4.0"

[lints]
workspace = true
