[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "The autonomous execution runtime for Cortex OS"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-nats.workspace = true
reqwest.workspace = true
html2text.workspace = true
uuid.workspace = true
async-trait = "0.1"
futures = "0.3"
notify = "8.2.0"

[lints]
workspace = true
