[package]
name = "cortex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "The autonomous execution runtime for Cortex OS"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-nats.workspace = true
reqwest.workspace = true
html2text.workspace = true
uuid.workspace = true
async-trait = "0.1"
futures = "0.3"
notify = "8.2.0"
aes-gcm = "0.10.3"
pbkdf2 = "0.13.0"
rand = "0.10.1"
sha2 = "0.11.0"
hex = "0.4.3"

[lints]
workspace = true
