[package]
name = "cortex-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cortex-core = { path = "../cortex-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-nats = { workspace = true }
serenity = { version = "0.12", features = ["full"] }
teloxide = { version = "0.13", features = ["macros"] }
dotenvy = "0.15"
uuid = { workspace = true }
async-trait = "0.1"
futures-util = "0.3"
