[package]
name = "cortex-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Terminal dashboard for Cortex OS (Ratatui)"

[[bin]]
name = "cortex-tui"
path = "src/main.rs"

[dependencies]
cortex-core = { path = "../cortex-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-nats.workspace = true
crossterm.workspace = true
ratatui.workspace = true

[lints]
workspace = true
